--- a/index.html
+++ b/index.html
@@ -56,53 +56,53 @@
 	<body>
 		<select id="song" onchange="change()">
 			<option>Choose a song to play!</option>
-			<option disabled value="Barracuda">Barracuda (ID 00)</option>
-			<option disabled value="Cascade">Cascade (ID 01)</option>
-			<option disabled value="Cheat Codes">Cheat Codes (ID 02)</option>
-			<option disabled value="Checkpoint">Checkpoint (ID 03)</option>
-			<option disabled value="Chip Zeal">Chip Zeal (ID 04)</option>
-			<option disabled value="Chronos">Chronos (ID 05)</option>
-			<option disabled value="Commando Steve">Commando Steve (ID 06)</option>
-			<option disabled value="Cool Friends">Cool Friends (ID 07)</option>
-			<option disabled value="Core">Core (ID 08)</option>
-			<option disabled value="Corrupted">Corrupted (ID 09)</option>
-			<option disabled value="Courtesy">Courtesy (ID 10)</option>
-			<option disabled value="Cruise Control">Cruise Control (ID 11)</option>
-			<option disabled value="Dance of the Incognizant">Dance of the Incognizant (ID 12)</option>
-			<option disabled value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole (ID 13)</option>
-			<option disabled value="Destroid 8 - Annihilate">Destroid 8 - Annihilate (ID 14)</option>
-			<option disabled value="Final Boss">Final Boss (ID 15)</option>
-			<option disabled value="Focus">Focus (ID 16)</option>
-			<option disabled value="FOX">FOX (ID 17)</option>
-			<option disabled value="FTW">FTW (ID 18)</option>
-			<option disabled value="Houston">Houston (ID 19)</option>
-			<option disabled value="HYPE">HYPE (ID 20)</option>
-			<option disabled value="Into The Zone">Into The Zone (ID 21)</option>
-			<option disabled value="Legacy">Legacy (ID 22)</option>
-			<option disabled value="Logic Gatekeeper">Logic Gatekeeper (ID 23)</option>
-			<option disabled value="Long Live The New Fresh">Long Live The New Fresh (ID 24)</option>
-			<option disabled value="Milky Ways">Milky Ways (ID 25)</option>
-			<option disabled value="New Game">New Game (ID 26)</option>
-			<option disabled value="On The Run">On The Run (ID 27)</option>
-			<option disabled value="Once Again">Once Again (ID 28)</option>
-			<option disabled value="Otis">Otis (ID 29)</option>
-			<option disabled value="Paper Dolls">Paper Dolls (ID 30)</option>
-			<option disabled value="Parallel Processing">Parallel Processing (ID 31)</option>
-			<option disabled value="Peer Gynt">Peer Gynt (ID 32)</option>
-			<option disabled value="Rainbow Road">Rainbow Road (ID 33)</option>
-			<option disabled value="Sevcon">Sevcon (ID 34)</option>
-			<option disabled value="Spectra">Spectra (ID 35)</option>
-			<option disabled value="Sugar Rush">Sugar Rush (ID 36)</option>
-			<option disabled value="Tension">Tension (ID 37)</option>
-			<option disabled value="Termination Shock">Termination Shock (ID 38)</option>
-			<option disabled value="The Art of War">The Art of War (ID 39)</option>
-			<option disabled value="The Lunar Whale">The Lunar Whale (ID 40)</option>
-			<option disabled value="Till It's Over">Till It's Over (ID 41)</option>
-			<option disabled value="Tokyo Skies">Tokyo Skies (ID 42)</option>
-			<option disabled value="Try This">Try This (ID 43)</option>
-			<option disabled value="Unlocked">Unlocked (ID 44)</option>
-			<option disabled value="Vindicate Me">Vindicate Me (ID 45)</option>
-			<option disabled value="Wicked">Wicked (ID 46)</option>
+			<option id="song1" disabled value="Barracuda">Barracuda (ID 00)</option>
+			<option id="song2" disabled value="Cascade">Cascade (ID 01)</option>
+			<option id="song3" disabled value="Cheat Codes">Cheat Codes (ID 02)</option>
+			<option id="song4" disabled value="Checkpoint">Checkpoint (ID 03)</option>
+			<option id="song5" disabled value="Chip Zeal">Chip Zeal (ID 04)</option>
+			<option id="song6" disabled value="Chronos">Chronos (ID 05)</option>
+			<option id="song7" disabled value="Commando Steve">Commando Steve (ID 06)</option>
+			<option id="song8" disabled value="Cool Friends">Cool Friends (ID 07)</option>
+			<option id="song9" disabled value="Core">Core (ID 08)</option>
+			<option id="song10" disabled value="Corrupted">Corrupted (ID 09)</option>
+			<option id="song11" disabled value="Courtesy">Courtesy (ID 10)</option>
+			<option id="song12" disabled value="Cruise Control">Cruise Control (ID 11)</option>
+			<option id="song13" disabled value="Dance of the Incognizant">Dance of the Incognizant (ID 12)</option>
+			<option id="song14" disabled value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole (ID 13)</option>
+			<option id="song15" disabled value="Destroid 8 - Annihilate">Destroid 8 - Annihilate (ID 14)</option>
+			<option id="song16" disabled value="Final Boss">Final Boss (ID 15)</option>
+			<option id="song17" disabled value="Focus">Focus (ID 16)</option>
+			<option id="song18" disabled value="FOX">FOX (ID 17)</option>
+			<option id="song19" disabled value="FTW">FTW (ID 18)</option>
+			<option id="song20" disabled value="Houston">Houston (ID 19)</option>
+			<option id="song21" disabled value="HYPE">HYPE (ID 20)</option>
+			<option id="song22" disabled value="Into The Zone">Into The Zone (ID 21)</option>
+			<option id="song23" disabled value="Legacy">Legacy (ID 22)</option>
+			<option id="song24" disabled value="Logic Gatekeeper">Logic Gatekeeper (ID 23)</option>
+			<option id="song25" disabled value="Long Live The New Fresh">Long Live The New Fresh (ID 24)</option>
+			<option id="song26" disabled value="Milky Ways">Milky Ways (ID 25)</option>
+			<option id="song27" disabled value="New Game">New Game (ID 26)</option>
+			<option id="song28" disabled value="On The Run">On The Run (ID 27)</option>
+			<option id="song29" disabled value="Once Again">Once Again (ID 28)</option>
+			<option id="song30" disabled value="Otis">Otis (ID 29)</option>
+			<option id="song31" disabled value="Paper Dolls">Paper Dolls (ID 30)</option>
+			<option id="song32" disabled value="Parallel Processing">Parallel Processing (ID 31)</option>
+			<option id="song33" disabled value="Peer Gynt">Peer Gynt (ID 32)</option>
+			<option id="song34" disabled value="Rainbow Road">Rainbow Road (ID 33)</option>
+			<option id="song35" disabled value="Sevcon">Sevcon (ID 34)</option>
+			<option id="song36" disabled value="Spectra">Spectra (ID 35)</option>
+			<option id="song37" disabled value="Sugar Rush">Sugar Rush (ID 36)</option>
+			<option id="song38" disabled value="Tension">Tension (ID 37)</option>
+			<option id="song39" disabled value="Termination Shock">Termination Shock (ID 38)</option>
+			<option id="song40" disabled value="The Art of War">The Art of War (ID 39)</option>
+			<option id="song41" disabled value="The Lunar Whale">The Lunar Whale (ID 40)</option>
+			<option id="song42" disabled value="Till It's Over">Till It's Over (ID 41)</option>
+			<option id="song43" disabled value="Tokyo Skies">Tokyo Skies (ID 42)</option>
+			<option id="song44" disabled value="Try This">Try This (ID 43)</option>
+			<option id="song45" disabled value="Unlocked">Unlocked (ID 44)</option>
+			<option id="song46" disabled value="Vindicate Me">Vindicate Me (ID 45)</option>
+			<option id="song47" disabled value="Wicked">Wicked (ID 46)</option>
 		</select><br>
 		<div>
 			<span id="currentPos">0:00.000</span><progress value="0" max="1" id="progress"></progress><span id="length">0:00.000</span><br>
@@ -232,11 +232,11 @@
     ];
     for (var i = 1; i <= 47; i++) {
       songs[i].addEventListener("canplaythrough", function() {
-        document.getElementById("song")[i].removeAttribute("disabled");
+        document.getElementById("song" + i).removeAttribute("disabled");
       });
     }
     function isSongAvail(id) {
-      return !document.getElementById("song")[id].hasAttribute("disabled");
+      return !document.getElementById("song" + i).hasAttribute("disabled");
     }
     if (isSongAvail(1) == true && isSongAvail(2) == true && isSongAvail(3) == true && isSongAvail(4) == true && isSongAvail(5) == true && isSongAvail(6) == true && isSongAvail(7) == true && isSongAvail(8) == true && isSongAvail(9) == true && isSongAvail(10) == true && isSongAvail(11) == true && isSongAvail(12) == true && isSongAvail(13) == true && isSongAvail(14) == true && isSongAvail(15) == true && isSongAvail(16) == true && isSongAvail(17) == true && isSongAvail(18) == true && isSongAvail(19) == true && isSongAvail(20) == true && isSongAvail(21) == true && isSongAvail(22) == true && isSongAvail(23) == true && isSongAvail(24) == true && isSongAvail(25) == true && isSongAvail(26) == true && isSongAvail(27) == true && isSongAvail(28) == true && isSongAvail(29) == true && isSongAvail(30) == true && isSongAvail(31) == true && isSongAvail(32) == true && isSongAvail(33) == true && isSongAvail(34) == true && isSongAvail(35) == true && isSongAvail(36) == true && isSongAvail(37) == true && isSongAvail(38) == true && isSongAvail(39) == true && isSongAvail(40) == true && isSongAvail(41) == true && isSongAvail(42) == true && isSongAvail(43) == true && isSongAvail(44) == true && isSongAvail(45) == true && isSongAvail(46) == true && isSongAvail(47) == true) {
       document.getElementById("restartBtn").removeAttribute("disabled");
