--- a/index.html
+++ b/index.html
@@ -232,11 +232,13 @@
     ];
     for (var i = 1; i <= 47; i++) {
       songs[i].addEventListener("canplaythrough", function() {
-        document.getElementById("song" + i).removeAttribute("disabled");
+        document.getElementById("song").options[i].disabled = false;
       });
     }
     function isSongAvail(id) {
-      return !document.getElementById("song" + i).hasAttribute("disabled");
+      if (document.getElementById("song").options[id].disabled == false) {
+        return true;
+      } else return false;
     }
     if (isSongAvail(1) == true && isSongAvail(2) == true && isSongAvail(3) == true && isSongAvail(4) == true && isSongAvail(5) == true && isSongAvail(6) == true && isSongAvail(7) == true && isSongAvail(8) == true && isSongAvail(9) == true && isSongAvail(10) == true && isSongAvail(11) == true && isSongAvail(12) == true && isSongAvail(13) == true && isSongAvail(14) == true && isSongAvail(15) == true && isSongAvail(16) == true && isSongAvail(17) == true && isSongAvail(18) == true && isSongAvail(19) == true && isSongAvail(20) == true && isSongAvail(21) == true && isSongAvail(22) == true && isSongAvail(23) == true && isSongAvail(24) == true && isSongAvail(25) == true && isSongAvail(26) == true && isSongAvail(27) == true && isSongAvail(28) == true && isSongAvail(29) == true && isSongAvail(30) == true && isSongAvail(31) == true && isSongAvail(32) == true && isSongAvail(33) == true && isSongAvail(34) == true && isSongAvail(35) == true && isSongAvail(36) == true && isSongAvail(37) == true && isSongAvail(38) == true && isSongAvail(39) == true && isSongAvail(40) == true && isSongAvail(41) == true && isSongAvail(42) == true && isSongAvail(43) == true && isSongAvail(44) == true && isSongAvail(45) == true && isSongAvail(46) == true && isSongAvail(47) == true) {
       document.getElementById("restartBtn").removeAttribute("disabled");
