--- a/index.html
+++ b/index.html
@@ -230,11 +230,53 @@
       document.getElementById("audio46"),
       document.getElementById("audio47")
     ];
-    for (var i = 1; i <= 47; i++) {
-      songs[i].addEventListener("canplaythrough", function() {
-        document.getElementById("song").options[i].disabled = false;
-      });
-    }
+    songs[1].addEventListener("canplaythrough", function() {document.getElementById("song").options[1].disabled = false;});
+    songs[2].addEventListener("canplaythrough", function() {document.getElementById("song").options[2].disabled = false;});
+    songs[3].addEventListener("canplaythrough", function() {document.getElementById("song").options[3].disabled = false;});
+    songs[4].addEventListener("canplaythrough", function() {document.getElementById("song").options[4].disabled = false;});
+    songs[5].addEventListener("canplaythrough", function() {document.getElementById("song").options[5].disabled = false;});
+    songs[6].addEventListener("canplaythrough", function() {document.getElementById("song").options[6].disabled = false;});
+    songs[7].addEventListener("canplaythrough", function() {document.getElementById("song").options[7].disabled = false;});
+    songs[8].addEventListener("canplaythrough", function() {document.getElementById("song").options[8].disabled = false;});
+    songs[9].addEventListener("canplaythrough", function() {document.getElementById("song").options[9].disabled = false;});
+    songs[10].addEventListener("canplaythrough", function() {document.getElementById("song").options[10].disabled = false;});
+    songs[11].addEventListener("canplaythrough", function() {document.getElementById("song").options[11].disabled = false;});
+    songs[12].addEventListener("canplaythrough", function() {document.getElementById("song").options[12].disabled = false;});
+    songs[13].addEventListener("canplaythrough", function() {document.getElementById("song").options[13].disabled = false;});
+    songs[14].addEventListener("canplaythrough", function() {document.getElementById("song").options[14].disabled = false;});
+    songs[15].addEventListener("canplaythrough", function() {document.getElementById("song").options[15].disabled = false;});
+    songs[16].addEventListener("canplaythrough", function() {document.getElementById("song").options[16].disabled = false;});
+    songs[17].addEventListener("canplaythrough", function() {document.getElementById("song").options[17].disabled = false;});
+    songs[18].addEventListener("canplaythrough", function() {document.getElementById("song").options[18].disabled = false;});
+    songs[19].addEventListener("canplaythrough", function() {document.getElementById("song").options[19].disabled = false;});
+    songs[20].addEventListener("canplaythrough", function() {document.getElementById("song").options[20].disabled = false;});
+    songs[21].addEventListener("canplaythrough", function() {document.getElementById("song").options[21].disabled = false;});
+    songs[22].addEventListener("canplaythrough", function() {document.getElementById("song").options[22].disabled = false;});
+    songs[23].addEventListener("canplaythrough", function() {document.getElementById("song").options[23].disabled = false;});
+    songs[24].addEventListener("canplaythrough", function() {document.getElementById("song").options[24].disabled = false;});
+    songs[25].addEventListener("canplaythrough", function() {document.getElementById("song").options[25].disabled = false;});
+    songs[26].addEventListener("canplaythrough", function() {document.getElementById("song").options[26].disabled = false;});
+    songs[27].addEventListener("canplaythrough", function() {document.getElementById("song").options[27].disabled = false;});
+    songs[28].addEventListener("canplaythrough", function() {document.getElementById("song").options[28].disabled = false;});
+    songs[29].addEventListener("canplaythrough", function() {document.getElementById("song").options[29].disabled = false;});
+    songs[30].addEventListener("canplaythrough", function() {document.getElementById("song").options[30].disabled = false;});
+    songs[31].addEventListener("canplaythrough", function() {document.getElementById("song").options[31].disabled = false;});
+    songs[32].addEventListener("canplaythrough", function() {document.getElementById("song").options[32].disabled = false;});
+    songs[33].addEventListener("canplaythrough", function() {document.getElementById("song").options[33].disabled = false;});
+    songs[34].addEventListener("canplaythrough", function() {document.getElementById("song").options[34].disabled = false;});
+    songs[35].addEventListener("canplaythrough", function() {document.getElementById("song").options[35].disabled = false;});
+    songs[36].addEventListener("canplaythrough", function() {document.getElementById("song").options[36].disabled = false;});
+    songs[37].addEventListener("canplaythrough", function() {document.getElementById("song").options[37].disabled = false;});
+    songs[38].addEventListener("canplaythrough", function() {document.getElementById("song").options[38].disabled = false;});
+    songs[39].addEventListener("canplaythrough", function() {document.getElementById("song").options[39].disabled = false;});
+    songs[40].addEventListener("canplaythrough", function() {document.getElementById("song").options[40].disabled = false;});
+    songs[41].addEventListener("canplaythrough", function() {document.getElementById("song").options[41].disabled = false;});
+    songs[42].addEventListener("canplaythrough", function() {document.getElementById("song").options[42].disabled = false;});
+    songs[43].addEventListener("canplaythrough", function() {document.getElementById("song").options[43].disabled = false;});
+    songs[44].addEventListener("canplaythrough", function() {document.getElementById("song").options[44].disabled = false;});
+    songs[45].addEventListener("canplaythrough", function() {document.getElementById("song").options[45].disabled = false;});
+    songs[46].addEventListener("canplaythrough", function() {document.getElementById("song").options[46].disabled = false;});
+    songs[47].addEventListener("canplaythrough", function() {document.getElementById("song").options[47].disabled = false;});
     function isSongAvail(id) {
       if (document.getElementById("song").options[id].disabled == false) {
         return true;
