--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 			select {
 				font-family: Overlock;
 			}
+			option:disabled {
+				color: black;
+				background: black;
+			}
+			option {
+				transition-duration: 500ms;
+			}
 			body {
 				font-family: Montserrat;
 				margin: 0;
@@ -21,6 +28,9 @@
 				min-width: 50px;
 				border-radius: 0;
         transition-duration: 500ms;
+			}
+			button:hover {
+				background: #d7d7d7;
 			}
 			h1 {font-weight: 900; font-size: 40px; margin: 0; text-align: center;}
 			h2 {font-weight: 600; font-size: 30px; margin: 0; text-align: center;}
