--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 				font-family: Overlock;
 			}
 			option:disabled {
-        display: none;
+				background: white; color: white;
 			}
 			body {
 				font-family: Montserrat;
@@ -18,12 +18,12 @@
 			}
 			button {
 				-webkit-appearance: none;
-        background: white;
+				background: white;
 				border: 1px solid black;
 				height: 50px;
 				min-width: 50px;
 				border-radius: 0;
-        transition-duration: 500ms;
+				transition-duration: 500ms;
 			}
 			button:hover {
 				background: #d7d7d7;
@@ -179,6 +179,15 @@
 		</div>
 	</body>
 	<script>
+    var playcounts = [0];
+    for (var i = 1; i <= 47; i++) {
+      if (localStorage.getItem("song" + i) != null) {
+        playCounts[i] = localStorage.getItem("song" + i);
+      } else {
+        playCounts[i] = 0;
+        localStorage.setItem("song" + i, playCounts[i]);
+      }
+    }
     var songs = [
       0,
       document.getElementById("audio1"),
@@ -585,6 +594,8 @@
 			var millis = (length[0] * 60000) + (length[1] * 1000) + length[2];
 			document.getElementById("progress").max = millis;
 			song.addEventListener("ended", function() {
+        playCounts[currentSong] += 1;
+        localStorage.setItem("song" + currentSong, playCounts[currentSong]);
 				song.pause();
 				nextSong();
 			});
